--- a/src/Translation/locales/jp.json
+++ b/src/Translation/locales/jp.json
@@ -52,7 +52,7 @@
   },
   "derivation_path": {
     "invalid":
-      "あなたのウォレット不適合な導出関数をしています。導出関数は 44'/60|61'/x'/n 型でなければいけません。"
+      "あなたのウォレットは、不適合な導出関数をしています。導出関数は 44'/60|61'/x'/n 型でなければいけません。"
   },
   "estate_edit": {
     "description": "説明",
