chore: add ja translations and fix dict

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -133,6 +133,7 @@
     "en": "English",
     "es": "Spanish",
     "fr": "French",
+    "ja": "Japanese",
     "ko": "Korean",
     "zh": "Chinese"
   },
