--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -133,6 +133,7 @@
     "en": "Ingles",
     "es": "Español",
     "fr": "Frances",
+    "ja": "Japonés",
     "ko": "Coreano",
     "zh": "Chino"
   },
