--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -135,6 +135,7 @@
     "en": "Anglais",
     "es": "Espanol",
     "fr": "Français",
+    "ja": "Japonais",
     "ko": "Coréen",
     "zh": "Chinois"
   },
