--- a/src/Translation/locales/jp.json
+++ b/src/Translation/locales/jp.json
@@ -123,7 +123,7 @@
   },
   "homepage": {
     "get_started": "始める",
-    "hero_subtitle": "ランドの分散型マーケット。手数料は無料です。",
+    "hero_subtitle": "分散型のランドマーケット。手数料は無料です。",
     "hero_title": "ジェネシスシティで、あなたの理想の場所を選ぼう",
     "newest_lands": "新着ランド",
     "view_more": "もっと見る",
