--- a/src/Translation/locales/jp.json
+++ b/src/Translation/locales/jp.json
@@ -217,7 +217,7 @@
     "history": {
       "auction": "オークション",
       "event": "イベント",
-      "from": "送信元",
+      "from": "送信者",
       "price": "価格",
       "sold": "売却済",
       "title": "取引履歴",
