--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -88,7 +88,7 @@
     "connect": "接続する",
     "connecting": "接続しています",
     "continue": "続ける",
-    "contributions": "貢献",
+    "contributions": "貢献区画",
     "created_at": "{date}に作成されました。",
     "estate": "不動産",
     "estates": "不動産",
@@ -105,7 +105,7 @@
     "paid_at": "支払済み",
     "parcels": "パーセル区画",
     "profile": "マイランド",
-    "publications": "Publications",
+    "publications": "公開中の区画",
     "request": "リクエスト",
     "retry": "やり直す",
     "revoke": "取り消す",
