--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -199,6 +199,10 @@
     "payable": "Payable at",
     "payable_placeholder": "Payable in days",
     "pending_tx": "The mortgage for",
+    "please_authorize_MANA":
+      "Please go to {settings_link} and and authorize the Mortgage Helper contract to operate MANA on your behalf",
+    "please_authorize_RCN":
+      "Please go to {settings_link} and authorize the Mortgage Manager contract to operate RCN on your behalf",
     "punitory_rate": "Punitory interest rate",
     "punitory_rate_placeholder": "Punitory rate",
     "request": "Requesting a Mortgage",
@@ -329,8 +333,8 @@
     "mana_approved":
       "You have authorized the {marketplace_contract_link} to operate MANA on your behalf",
     "marketplace_contract": "Marketplace contract",
-    "mortgage_helper_contract": "Mortgage helper contract",
-    "mortgage_manager_contract": "Mortgage manager contract",
+    "mortgage_helper_contract": "Mortgage Helper contract",
+    "mortgage_manager_contract": "Mortgage Manager contract",
     "pending_tx": "You have a pending transaction",
     "unauthorize_land_check":
       "Unchecking unauthorizes LAND usage for the Marketplace contract",
