--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -54,6 +54,13 @@
     "invalid":
       "您为钱包设置了错误的派生路径。 你的派生路径必须遵循模式 44'/60|61'/x'/n"
   },
+  "estate_detail": {
+    "delete": "删除遗产",
+    "delete_desc": "你要删除庄园{estate_id}",
+    "edit_parcels": "编辑地块",
+    "parcels": "包裹包括在内",
+    "pending_tx": "这个庄园"
+  },
   "estate_edit": {
     "description": "描述",
     "edit_estate": "编辑地产",
@@ -62,7 +69,9 @@
   },
   "estate_select": {
     "description": "在{x}，{y}处选择相邻的地块",
-    "selection": "选择你的地块建立新的地产"
+    "detail": "房地产细节",
+    "edit_selection": "在地图上选择宗地",
+    "new_selection": "在地图上选择新地块的地块"
   },
   "footer": {
     "color_key": "图示",
@@ -90,6 +99,7 @@
     "continue": "继续",
     "contributions": "小区份额",
     "created_at": "创建于 {date}",
+    "edit": "编辑",
     "estate": "地产",
     "estates": "地产",
     "expired_at": "截止时间 {time}",
@@ -205,7 +215,6 @@
     "actions": {
       "cancel": "取消出售",
       "create_estate": "建立地产",
-      "edit": "编辑",
       "permissions": "权限",
       "sell": "出售",
       "transfer": "转让"
@@ -323,6 +332,7 @@
     "cancel_mortgage": "您取消了购买地块 {parcel_link} 的抵押",
     "claim_mortgage_resolution": "你声称{parcel_link}",
     "create_mortgage": "您要求抵押以购买地块 {parcel_link}",
+    "delete_estate": "你删除了庄园{estate_id}",
     "disapproved": "您未授权{marketplace_contract_link}以您的名义操作 MANA",
     "edit": "您编辑了{parcel_link}地块的名称\"{name}\"和描述\"{description}\"",
     "manage": "您授权{address_link}更新{parcel_link}上的内容",
