--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -55,6 +55,13 @@
     "invalid":
       "지갑에 대해 잘못된 파생 경로를 설정했습니다. 파생 경로는 패턴 44 '/ 60 | 61'/ x '/ n을 따라야합니다."
   },
+  "estate_detail": {
+    "delete": "재산 삭제",
+    "delete_desc": "당신은 부동산 {estate_id}을 삭제하려고합니다.",
+    "edit_parcels": "소포 편집",
+    "parcels": "소포 포함",
+    "pending_tx": "이 재산"
+  },
   "estate_edit": {
     "description": "기술",
     "edit_estate": "부동산 편집",
@@ -63,7 +70,9 @@
   },
   "estate_select": {
     "description": "{x}, {y}에서 시작하여 인접한 소포를 선택하십시오.",
-    "selection": "새 부동산에 대한 소포를 선택하십시오."
+    "detail": "부동산 상세",
+    "edit_selection": "지도에서 소포를 선택하십시오.",
+    "new_selection": "새로운 부동산에 대한지도에서 소포를 선택하십시오."
   },
   "footer": {
     "color_key": "색상 키",
@@ -91,6 +100,7 @@
     "continue": "잇다",
     "contributions": "공헌",
     "created_at": "만든 {date}",
+    "edit": "편집하다",
     "estate": "재산",
     "estates": "부동산",
     "expired_at": "만료 됨 {time}",
@@ -208,7 +218,6 @@
     "actions": {
       "cancel": "판매취소",
       "create_estate": "부동산 만들기",
-      "edit": "편집",
       "permissions": "권한",
       "sell": "판매",
       "transfer": "이전"
@@ -338,6 +347,7 @@
     "cancel_mortgage": "소포 {parcel_link}을 사기 위해 모기지를 취소합니다.",
     "claim_mortgage_resolution": "당신은 {parcel_link}을 주장했습니다.",
     "create_mortgage": "소포 {parcel_link}을 사기 위해 모기지를 요청했습니다.",
+    "delete_estate": "부동산 {estate_id}을 삭제했습니다.",
     "disapproved":
       "귀하를 대신하여 {marketplace_contract_link}의 MANA 운영을 허가받지 않았습니다.",
     "edit":
