--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -72,7 +72,8 @@
     "description": "Seleccione parcelas adyacentes a partir de {x}, {y}",
     "detail": "Detalle de finca",
     "edit_selection": "Seleccione las parcelas en el mapa",
-    "new_selection": "Seleccione las parcelas en el mapa para su nueva finca"
+    "new_selection": "Seleccione las parcelas en el mapa para su nueva finca",
+    "tx_to_be_send": "Enviarás una transacción a {action} parcels: {parcels}"
   },
   "footer": {
     "color_key": "Mapa de Colores",
