--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -74,7 +74,9 @@
     "detail": "Détail immobilier",
     "edit_selection": "Sélectionnez les parcelles sur la carte",
     "new_selection":
-      "Sélectionnez les parcelles sur la carte pour votre nouveau domaine"
+      "Sélectionnez les parcelles sur la carte pour votre nouveau domaine",
+    "tx_to_be_send":
+      "Vous allez envoyer une transaction à {action} parcelles: {parcels}"
   },
   "footer": {
     "color_key": "Code Couleur",
