--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -367,6 +367,8 @@
     "cancel_mortgage":
       "Vous annulez une hypothèque pour acheter le colis {parcel_link}",
     "claim_mortgage_resolution": "Vous avez réclamé {parcel_link}",
+    "create_estate":
+      "Vous avez créé un domaine avec les parcelles {parcels_link}",
     "create_mortgage":
       "Vous avez demandé une hypothèque pour acheter le colis {parcel_link}",
     "delete_estate": "Vous avez supprimé le domaine {estate_id}",
@@ -374,6 +376,10 @@
       "Vous avez autorisé le {marketplace_contract_link} à transférer des fonds en votre nom",
     "edit":
       "Vous avez mis à jour {parcel_link} avec le nom \"{name}\" et la description \"{description}\"",
+    "edit_estate_metadata":
+      "Vous avez édité la propriété {estate_id} sous le nom \"{name}\" et la description \"{description}\"",
+    "edit_estate_parcels":
+      "Vous {action} colis {parcels_link} à succession {estate_id}",
     "manage":
       "Vous avez donné {address_link} la permission de mettre à jour le contenu de {parcel_link}",
     "manage_revoked":
