feat: react to successful txs from the front-end

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -110,6 +110,7 @@
     "request": "Request",
     "retry": "Retry",
     "revoke": "Revoke",
+    "sale": "Sale",
     "service_unavailable": "Service unavailable",
     "settings": "Settings",
     "sign_in": "Sign In",
