--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -109,6 +109,7 @@
     "request": "リクエスト",
     "retry": "やり直す",
     "revoke": "取り消す",
+    "sale": "販売",
     "service_unavailable": "サービスは利用できません。",
     "settings": "設定",
     "sign_in": "サインイン",
