--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -110,6 +110,7 @@
     "request": "의뢰",
     "retry": "다시 해 보다",
     "revoke": "취소",
+    "sale": "판매",
     "service_unavailable": "서비스를 사용할 수 없음",
     "settings": "설정",
     "sign_in": "로그인",
