--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -111,6 +111,7 @@
     "request": "Demande",
     "retry": "Recommencez",
     "revoke": "Révoquer",
+    "sale": "Vente",
     "service_unavailable": "Service indisponible",
     "settings": "Paramètres",
     "sign_in": "Se connecter",
