--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -243,7 +243,10 @@
     "description": "Description",
     "edit_land": "Edit LAND",
     "name": "Name",
-    "set_name_and_desc": "Set a name and description for {parcel_name}."
+    "set_name_and_desc": "Set a name and description for {parcel_name}.",
+    "ipns": "Content link",
+    "warning_tooltip":
+      "This will be used to show your scene. Update only if you know what you are doing."
   },
   "parcel_manage": {
     "address": "Operator address",
